--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     </div>
   </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.js"></script>
     <script type="text/javascript" src='app.js'></script>
+    <script src="./controllers/messages_controller.js" type="text/javascript"></script>
+    <script src="./controllers/post_message_controller.js" type="text/javascript"></script>
+    <script src="./factories/messages_factory.js" type="text/javascript"></script>
+    <base href="/">
   </body>
 </html>
